src/objects/StatesMap__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Is_State__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is State</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State_Id__c</fullName>
        <label>State Id</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State_code__c</fullName>
        <label>State code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <label>StatesMap</label>
</CustomObject>